--- a/App/public/locales/bg/translation.json
+++ b/App/public/locales/bg/translation.json
@@ -1,8 +1,6 @@
 {
-    "test":"Тестов текст",
-    "title": "Welcome to react using react-i18next",
-    "description": {
-      "part1": "To get started, edit <1>src/App.js</1> and save to reload.",
-      "part2": "Switch language between english and german using buttons above."
-    }
-  }
+  "Home": "Начало",
+  "Data": "Данни",
+  "Train": "Трениране",
+  "Test": "Тестване"
+}
