no py env popup design

--- a/App/public/locales/en/translation.json
+++ b/App/public/locales/en/translation.json
@@ -2,5 +2,8 @@
   "Home": "Home",
   "Data": "Data",
   "Train": "Train",
-  "Test": "Test"
+  "Test": "Test",
+  "no-py-env": "Python enviornment not found!",
+  "use-existing": "Use Existing",
+  "new-venv":"New VENV"
 }
