Fixing bug to show buttons in ImportImage

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -12,7 +12,7 @@
   "captioning": "Поставяне На Надписи",
   "choose-image-folder": "Избери папка със снимки",
   "choose-labels": "Избери етикет",
-  "no-labels": "Нямаш етикет",
+  "no-labels": "Нямаш етикет?",
   "overview-button": "Преглед",
   "finish-button": "Приключи",
   "fill-manually": "Попълни ръчно",
