--- a/App/assets/locales/en/translation.json
+++ b/App/assets/locales/en/translation.json
@@ -16,7 +16,7 @@
   "overview-button": "Overview",
   "finish-button": "Finish",
   "fill-manually": "Fill Manually",
-  "no-labels": "No Labels",
+  "no-labels": "No Labels?",
   "delete-rows": "Delete Rows",
   "missing-values-text": "Missing Values Text",
   "name-dataset": "Dataset Name",
