Fix bug with the error of TextField in ImportImage

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -37,5 +37,6 @@
   "missing-name": "Липсва име",
   "width": "Ширина",
   "height": "Височина",
-  "name": "Име"
+  "name": "Име",
+  "delete-image": "Изтрий снимка"
 }
