--- a/App/assets/locales/en/translation.json
+++ b/App/assets/locales/en/translation.json
@@ -55,6 +55,7 @@
   "select-file": "Selected File",
   "make-model": "Make Model",
   "records": "Records",
-  "image-data": "Image Data"
+  "image-data": "Image Data",
+  "no-datasets-found": "No Datasets Found"
 
 }
