Almost translte setup Page

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -109,7 +109,29 @@
   "captioning-subtext-1": " съчетава компютърно зрение и обработка на естествен език за автоматично генериране на описателни надписи към изображения. Това е все едно да научите компютър да описва това, което вижда на дадена снимка, точно както би направил човек..",
   "captioning-subtext-2": "В наборите от данни за надписи на изображения всяко изображение се свързва с един или повече надписи, генерирани от човека, които предоставят текстови описания на обектите, действията и сцените, изобразени на изображенията. Тези набори от данни позволяват на изследователите и разработчиците да обучават алгоритми, които могат да разбират и предават ефективно визуална информация. Етикетите в наборите от данни за надписи на изображения се състоят от текстови описания, съответстващи на всяко изображение, които насочват модела при обучението за генериране на точни и смислени надписи.",
   "captioning-subtext-3": "В областта на програмирането и машинното обучение схващането на концепцията за набори от данни с надписи на изображения поставя основите за създаване на системи с изкуствен интелект, способни да разбират и описват визуално съдържание.",
-  "models": "Модели"
+  "models": "Модели",
+  "setup": "Настройване",
+  "setup-introduction": "На тази страница ще научите как да настроите средата на Python, в която ще се изпълнява целият код на Python, използван за създаване и обучение на моделите. Първо изберете дали ще използвате CPU или GPU за създаване и обучение на моделите. Използването на CPU е по-просто, но е и по-бавно. От друга страна, използването на графичен процесор е много по-бързо, но е и по-трудно за настройка.",
+  "cpu-introduction": "Ако искате да използвате централния си процесор, можете да следвате това ръководство, което използва Python за създаване на средата, или ръководството за графични процесори, което използва miniconda за средата и прескача тази стъпка.",
+  "gpu-setup":"GPU настройване",
+  "system-requirements": "Системни изисквания",
+  "or-higher":"или по-високо",
+  "python-version":"Ако Python все още не е инсталиран на вашата система, изтеглете и инсталирайте версия между Python 3.8 и Python 3.11 от ",
+  "official-python-website": "Офицалния уебсайт на Python",
+  "check-python-path": " Уверете се, че сте маркирали опцията за добавяне на Python към системния PATH по време на инсталацията.",
+  "open-command-prompt": "Отваряне на командния прозорец",
+  "press":"Натиснете ",
+  "type-cmd": "напишете ",
+  "press-enter":"и натиснете Enter, за да отворите командната прозореца.",
+  "create-virtual-env": "Създаване на виртуална среда",
+  "activate-virtual-env": "Активиране на виртуалната среда",
+  "active-virtual-env": "Активирайте виртуалната среда, като изпълните следната команда",
+  "install-necessary-libraries": "Инсталирайте необходимите билбиотеки",
+  "once-activated-env": "След като виртуалната среда е активирана, инсталирайте необходимите библиотеки, като използвате pip",
+  "select-python-executable": "Избор на изпълнимия файл на Python"
+
+
+
 
 
 }
