style: :art: snackbar style changes

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -156,8 +156,9 @@
   "weights-bias-start":"Всяка връзка между невроните",
   "target-start":"В машинното обучение (ML) целта,",
   "epoch-start": "В машинното обучение една епоха",
-  "learning-rate-start":"Степента на обучение контролира размера на стъпката"
-
+  "learning-rate-start":"Степента на обучение контролира размера на стъпката",
+  "no-python-title": "Няма Python",
+  "no-python-message": "Не сте настроили python. Можете да видите как да го направите от секцията за настройване."
 
 
 
