fix: :bug: small fixes

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -158,7 +158,9 @@
   "epoch-start": "В машинното обучение една епоха",
   "learning-rate-start":"Степента на обучение контролира размера на стъпката",
   "no-python-title": "Няма Python",
-  "no-python-message": "Не сте настроили python. Можете да видите как да го направите от секцията за настройване."
+  "no-python-message": "Не сте настроили python. Можете да видите как да го направите от секцията за настройване.",
+  "no-models-found": "Не бяха открити модели",
+  "new-model": "Нов модел"
 
 
 
