fix: :memo: added translations

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -1,6 +1,8 @@
 {
-  "Home": "Начало",
-  "Data": "Данни",
+  "home": "Начало",
+  "data": "Данни",
+  "use": "Използване",
+  "learn": "Учене",
   "Train": "Трениране",
   "Test": "Тестване",
   "type": "Тип",
@@ -160,8 +162,27 @@
   "no-python-title": "Няма Python",
   "no-python-message": "Не сте настроили python. Можете да видите как да го направите от секцията за настройване.",
   "no-models-found": "Не бяха открити модели",
-  "new-model": "Нов модел"
-
+  "new-model": "Нов модел",
+  "homepage-text1-part1": "Първа стъпка",
+  "homepage-text1-part2":",която трябва да поемета е да си вкарате някакъв вид dataset под формата на таблица или снимки, като отидете 'Данни' и изберете 'Импорт'",
+  "homepage-text2-part1": "Втора стъпка",
+  "homepage-text2-part2":" е да си направите модел на база някой dataset, който сте направили преди това, като отидете на 'Модели' и след това на 'Създаване'.",
+  "homepage-text3-part1": "Трета стъпка",
+  "homepage-text3-part2":" е да изберете кой модел искате да го тренирате, като изберете бутона 'Тренирай Модел'.",
+  "train-model": "Тренирай",
+  "homepage-text4-part1": "Последната стъпка ",
+  "homepage-text4-part2": "е вече като сте готови с тренирането да го тествате и да видите какви резултати вади, като отидете на 'Използвай'. ",
+  "use-model":"Използвай модел",
+  "homepage-introduction": " в нашето приложение, в което всеки, който е запознат с програмирането или по-точно с изкуствения интелект може се възползва от функциите на програмата ни. Тук можете да създавате и тренирате модели, които можете да използвате в направата на приложения или програми, които правите. Тук можете да вкарвате и тренирате информация под формата на таблици или снимков материал. Можете бързо, лесно и ефетктивно да правите модели с помощта на machine learning(ML).",
+  "start-with-easy-step": "Започнете с няколко лесни стъпки",
+  "go-to-setup": "Към настройване",
+  "import": "Вмъкване",
+  "view":"Преглед",
+  "not-trained":"Не е трениран",
+  "create":"Създаване",
+  "epochs": "Епохи",
+  "select-model-options": "Избери опции за модела",
+  "model-trained-for":"Моделът е трениран за"
 
 
 
