refactor: :globe_with_meridians: added translations

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -128,7 +128,7 @@
   "create-virtual-env": "Създаване на виртуална среда",
   "activate-virtual-env": "Активиране на виртуалната среда",
   "active-virtual-env": "Активирайте виртуалната среда, като изпълните следната команда",
-  "install-necessary-libraries": "Инсталирайте необходимите билбиотеки",
+  "install-necessary-libraries": "Инсталирайте необходимите библиотеки",
   "once-activated-env": "След като виртуалната среда е активирана, инсталирайте необходимите библиотеки, като използвате pip",
   "select-python-executable": "Избор на изпълнимия файл на Python",
   "select-python-executable-subinfo-1":"Отидете в настройките в долния ляв ъгъл",
@@ -182,7 +182,29 @@
   "create":"Създаване",
   "epochs": "Епохи",
   "select-model-options": "Избери опции за модела",
-  "model-trained-for":"Моделът е трениран за"
+  "model-trained-for":"Моделът е трениран за",
+  "integrate-table-text":"Този раздел съдържа код, който може да се използва за интегриране на модела в собствените ви проекти. Трябва да запазите модела и след това да го импортирате в кода по следния начин",
+  "tabular data": "Таблични данни",
+  "accuracy": "Точност",
+  "edit": "Редактиране",
+  "delete": "Изтриване",
+  "model-type": "Вид модел",
+  "model": "Модел",
+  "test-model": "Тестване",
+  "integrate-model":"Интегриране",
+  "result": "резултат",
+  "save-model": "Запази модела",
+  "python":"Python",
+  "settings-title":"Настройки",
+  "python_exe_path": "Път до изпълнимия файл на python",
+  "creating-model-title": "Създаване на модел",
+  "creating-model-text":"Създаването на модела може да отнеме известно време",
+  "python-error-title":"Python Грешка",
+  "python-error-message":"Имаше грешка при изпълняването на python кода. Убедете се, че сте настройли всичко правилно. Може да сте забравили да изтеглите необходимите библиотеки.",
+  "create-file-error-title": "Грешка при създаване на файл",
+  "create-file-error-message": "Имаше грешка при създаването на файл.",
+  "model-created-title":"Моделът беше успешно създаден",
+  "model-created-message":"Моделът беше успешно създаден. Можете да продължите към тренирането му."
 
 
 
